# trace-sdk-py

./: README.md  main.py  pyproject.toml
.github/workflows/: release.yml
src/pulse_sdk/: __init__.py  config.py  normalize.py  pricing.py  state.py  trace.py  transport.py  types.py
src/pulse_sdk/providers/: __init__.py  anthropic.py  openai.py
tests/: test_sdk.py  test_server.py
