[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pulse-trace-sdk"
version = "0.2.4"
description = "Pulse Python SDK for tracing LLM providers"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Pulse" }
]
dependencies = [
  "requests>=2.32.0",
]
license = { text = "MIT" }

[tool.hatch.build]
packages = ["src/pulse_sdk"]

[tool.hatch.build.targets.wheel]
packages = ["src/pulse_sdk"]
exclude = [
  "src/pulse_sdk/__pycache__",
  "**/*.pyc",
]

[tool.hatch.build.targets.sdist]
include = [
  "src/pulse_sdk",
  "README.md",
  "pyproject.toml",
]
exclude = [
  "tests",
  "**/__pycache__",
  "**/*.pyc",
]

[dependency-groups]
dev = [
    "anthropic>=0.79.0",
    "openai>=2.20.0",
    "pytest>=9.0.2",
    "python-dotenv>=1.0.1",
    "fastapi>=0.115.5",
    "uvicorn>=0.32.0",
]

[project.optional-dependencies]
dev = [
  "black>=26.1.0",
  "pytest>=8.3.0",
]
